fix: privacy text color in dark mode

--- a/apps/block_scout_web/assets/css/theme/_dark-theme.scss
+++ b/apps/block_scout_web/assets/css/theme/_dark-theme.scss
@@ -1115,6 +1115,9 @@ $dark-stakes-banned-background: #3e314c;
 			background-color: $dark-primary !important;
 		}
 	}
+	.privacy-container {
+		color: #fff;
+	}
 }
 
 .navbar-dark .navbar-toggler {
